--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
      <link rel="stylesheet" type="text/css" href="styles.css">
      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
 
+     <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+
 </head>
 <body>
 <main>
@@ -21,7 +28,10 @@
       <div id = container>
         <div class="row">
             <div id="item-div"class="col s12 city-div"><h5>What City Do You Live In?</h5>
-            <input id="cityInput" placeholder = "Enter Your City Name (ie. Chicago, Los Angeles, New York">
+            <input id="cityInput" placeholder = "Enter Your City Name (ie. Chicago, Los Angeles, New York)">
+            <div class="input-group-append searchButton">
+              <button class="btn btn-outline-secondary fas fa-search" type="button" id="button-addon2"></button>
+          </div>
             </div>
             <div id="item-div" class="col s12 m3 l3 weather-div"><h5>Weather</h5></div>
             <div class="divider"></div>
