--- a/index.html
+++ b/index.html
@@ -29,18 +29,15 @@
         <div class="row">
             <div id="item-div"class="col s12 city-div"><h5>What City Do You Live In?</h5>
             <input id="cityInput" placeholder = "Enter Your City Name (ie. Chicago, Los Angeles, New York)">
-
-
             <div class="input-group-append searchButton">
               <button class="btn btn-outline-secondary fas fa-search" type="button" id="button-addon2"></button>
             </div>
-
-          </div>
-            <div class="input-group-append searchButton">
-              <button class="btn btn-outline-secondary fas fa-search" type="button" id="button-addon2"></button>
           </div>
             </div>
-            <div id="item-div" class="col s12 m3 l3 weather-div"><h5>Weather</h5></div>
+            <div id="item-div" class="col s12 m3 l3 weather-div"><h5>Weather</h5>
+            <div id="cityName"></div>
+            <div id="temp"></div>
+            </div>
             <div class="divider"></div>
             <div id="item-div" class="col s12 m8 l8 recipe-div"><h5>Eats</h5></div>
             <div class="divider"></div>
