--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+  
 <main>
   <nav class="nav-extended header">
         <div class="nav-wrapper">
@@ -39,9 +40,7 @@
             
             <div id="item-div" class="col s12 m3 l3 weather-div"><h5>Weather</h5>
 
-
             <div id="cityName"> </div> 
-
             
             <div id="temp"></div>
 
@@ -58,7 +57,10 @@
 </footer>
 
 <!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="/script.js"></script>
+<script src="script.js"></script>
+
+
 </body>
 </html>
