added ids to new elements inside of the recipe div.

--- a/index.html
+++ b/index.html
@@ -40,18 +40,30 @@
 
           </div>
             </div>
-            <div id="item-div" class="col s12 m3 l3 weather-div"><h5>Weather</h5>
+            <div id="item-div" class="col s3 m3 l3 weather-div"><h5>Weather</h5>
+              <div class="divider"></div>
 
-            <div id="cityName"> </div> 
+              <div id="cityName"> </div> 
 
-            <div id="cityName"></div>
+              <div id="cityName"></div>
 
-            <div id="temp"></div>
+               <div id="temp"></div>
 
             </div>
-            <div class="divider"></div>
-            <div id="item-div" class="col s12 m8 l8 recipe-div"><h5>Eats</h5></div>
-            <div class="divider"></div>
+            <div id="item-div" class="col s8 m8 l8 offset-s1 recipe-div"><h5>Eats</h5>
+              <div class="divider"></div>
+
+              <img src="" id="foodPic">
+
+              <h3 id="foodName"></h3>
+
+              <p id="foodDescription"></p>
+
+              <a id="recipeLink"></p>
+                
+              <a id="youtubeLink"></p>
+              </div>
+
 
         </div>
     </div>
