--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
               <p id="foodDescription"></p>
 
-              <a id="recipeLink"></p>
+              <a id="recipeLink"></a>
                 
-              <a id="youtubeLink"></p>
+              <a id="youtubeLink"></a>
               </div>
 
 
