--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
           </div>
             </div>
-            <div id="item-div" class="col s3 m3 l3 weather-div"><h5>Weather</h5>
+          <div class="row">
+            <div id="item-div" class="col s12 m4 l4 weather-div"><h5>Weather</h5>
               <div class="divider"></div>
 
               <div id="cityName"> </div> 
@@ -50,8 +51,26 @@
                <div id="temp"></div>
 
             </div>
-            <div id="item-div" class="col s8 m8 l8 offset-s1 recipe-div"><h5>Eats</h5>
+            <div id="item-div" class="col s12 m7 l7 offset-s1 recipe-div"><h5>Eats</h5>
               <div class="divider"></div>
+
+              <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img class="activator" id="foodPic" src="">
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4" id="foodName">
+                    <!-- <i class="material-icons right">Description</i></span> -->
+                  <p><a href="#" id="recipeLink">Recipe Link</a></p>
+                  <p><a href="#" id="youtubeLink">YouTube</a></p>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4" id="foodName">About<i class="material-icons right">close</i></span>
+                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+              </div>
+
+
 
               <img src="" id="foodPic">
 
@@ -64,10 +83,8 @@
               <a id="youtubeLink">Click here for the YouTube Video</a>
 
               </div>
-
-
         </div>
-    </div>
+      </div>
     </main>
 <footer>
     <p>copyright CRC Inc.</p>
