--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4" id="foodName">About
                       <i class="material-icons right">more_vert</i>
+                      <span></span>
                   </span>
                   <p id="foodDescription"></p>
                   <button class="cardButton" id="recipeLink">Recipe</button>
