placed hide() and show() functions to row2

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           </div>
             </div>
-          <div class="row">
+          <div class="row" id="row2">
             <div id="item-div" class="col s12 m4 l4 weather-div"><h5>Weather</h5>
               <div class="divider"></div>
 
