--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       </nav>
       <div id = container>
         <div class="row">
-            <div id="item-div"class="col s12 city-div"><h5>What City Do You Live In?</h5>
+            <div id="item-div"class="col s12 city-div z-depth-2">
+              <h5>What City Do You Live In?</h5>
             <input id="cityInput" placeholder = "Enter Your City Name (ie. Chicago, Los Angeles, New York)">
             <div class="input-group-append searchButton">
               <button class="btn btn-outline-secondary fas fa-search" type="button" id="button-addon2"></button>
@@ -42,18 +43,24 @@
 
           </div>
             </div>
+
           <div class="row" id="row2">
-            <div id="item-div" class="col s12 m4 l4 weather-div"><h5>Weather</h5>
+            <div id="flexbox-center">
+            <div id="item-div" class="col s12 m4 l4 weather-div z-depth-2">
+              
+              <h5>Weather</h5>
               <div class="divider"></div>
+
+              <div id="temp"></div>
 
               <div id="cityName"> </div> 
 
-              <div id="cityName"></div>
-
-               <div id="temp"></div>
+               <div id="cityDate"></div>
 
             </div>
-            <div id="item-div" class="col s12 m7 l7 offset-s1 recipe-div"><h5>Eats</h5>
+            <div id="item-div" class="col s12 m7 l7 recipe-div z-depth-2">
+              
+              <h5>Eats</h5>
               <div class="divider"></div>
 
               <div class="card">
@@ -78,6 +85,7 @@
                   <button class="cardButton" id="youtubelink" ></button>
                 </div>
               </div>
+            </div>
 
 
 <!-- 
