--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                       <span></span>
                   </span>
                   <p id="foodDescription"></p>
-                  <button class="cardButton" id="recipelink"></button>
-                  <button class="cardButton" id="youtubelink" ></button>
+                  <button class="cardButton" id="recipelink"><a id="recipeid">Recipe</a></button>
+                  <button class="cardButton" id="youtubelink"><a id="youtubeid">YouTube Video</a></button>
                 </div>
               </div>
             </div>
